# connectors

./: .gitignore  LICENSE  README.md  brotli_test.bt  bz2_test.pbz2  lzma_test.xz  pyproject.toml
src/connectors/: __init__.py  amtsblattportal.py  arxiv.py  bingsearch.py  cinemotion.py  fields_set.py  gmail.py  gmail_reader.py  googlesearch.py  hf_bootstrap.py  hf_ingest.py  imdb.py  mail.py  midlib.py  openai_search.py  reuters.py  reuters_sparse.py  scheduler.py  scifact.py  state.py  swiss_enterprise.py  telegram.py  telegram_message.py  telegram_reader.py  utils.py
src/connectors/grounding/: __init__.py  data_grounding.py
src/connectors/scraper/: __init__.py  crawl4ai_scraper.py  gemini_url_context_scraper.py  language.py  scraper_base.py
tests/: test_data_grounding.py  test_smoke.py
