[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "connectors"
version = "0.1.0"
description = "Data-source connectors: scrapers, feeds and messaging."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Robert van Kommer", email = "robert.vankommer@gmail.com" }]
keywords = ["connectors", "scraping", "feeds"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/kiodia/connectors"
Repository = "https://github.com/kiodia/connectors"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
